Added more use case tests